[package]
name = "webp-converter"
version = "0.1.0"
edition = "2021"
description = "A library for converting image files (JPG, JPEG, PNG, GIF) to WebP format, providing functionality for batch conversion with directory structure preservation and error handling."
license = "MIT"
repository = "https://github.com/csalmeida/webp-converter"

[dependencies]
image = "0.25.2"
walkdir = "2.5.0"
